--- a/ExamApp.UI/packages.config
+++ b/ExamApp.UI/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors.ja" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Core" version="7.1.0.431" targetFramework="net461" />
   <package id="Prism.Unity" version="7.1.0.431" targetFramework="net461" />
   <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net461" />
